--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,6 @@ go.work
 # Icon must end with two \r
 Icon
 
-
 # Thumbnails
 ._*
 
@@ -107,5 +106,7 @@ bower_components
 psd
 thumb
 sketch
+
+memo.txt
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,nextjs,react,go
