--- a/webserver/myapp/package.json
+++ b/webserver/myapp/package.json
@@ -13,8 +13,10 @@
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "next": "13.4.12",
+    "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uikit": "^3.16.23"
   }
 }
