--- a/webserver/myapp/package.json
+++ b/webserver/myapp/package.json
@@ -16,7 +16,7 @@
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "google-protobuf": "^3.21.2",
-    "next": "13.4.12",
+    "next": "^13.4.16-canary.1",
     "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
