--- a/webserver/myapp/package.json
+++ b/webserver/myapp/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tag-input-component": "^2.0.2",
     "typescript": "5.1.6",
     "uikit": "^3.16.23"
   },
