--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,3 +63,5 @@ services:
     environment:
       MINIO_ROOT_USER: user
       MINIO_ROOT_PASSWORD: password
+    env_file:
+      - ./s3/docker_secret.env
