--- a/infra/eksctl/cluster.yaml
+++ b/infra/eksctl/cluster.yaml
@@ -27,3 +27,11 @@ nodeGroups:
         imageBuilder: true
         awsLoadBalancerController: true
         cloudWatch: true
+        ebs: true
+      attachPolicy:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - "s3:GetObject"
+            Resource: "arn:aws:s3:::example-bucket/*"
